--- a/client_frontend/src/index.html
+++ b/client_frontend/src/index.html
@@ -1,13 +1,12 @@
-<!-- client_frontend/src/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ZEPUS Clinics</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ZEPUS Admin Portal</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="./main.jsx"></script>
   </body>
 </html>
-
