--- a/client_frontend/src/index.html
+++ b/client_frontend/src/index.html
@@ -1,12 +1,13 @@
+<!-- client_frontend/src/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZEPUS Admin Portal</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./main.jsx"></script>
+    <!-- ✅ Vite will inject the script automatically -->
   </body>
 </html>
