Fix index.html script path for production

--- a/client_frontend/src/index.html
+++ b/client_frontend/src/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- ✅ Vite will inject the script automatically -->
+    <!-- Leave index.html empty of manual script imports -->
   </body>
 </html>
