--- a/client_frontend/src/index.html
+++ b/client_frontend/src/index.html
@@ -1,4 +1,3 @@
-<!-- client_frontend/src/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Leave index.html empty of manual script imports -->
+    <script type="module" src="/main.jsx"></script>
   </body>
 </html>
