--- a/admin_frontend/src/index.html
+++ b/admin_frontend/src/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/admin/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZEPUS Admin</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./main.jsx"></script>
+    <!-- ✅ Use full path starting from /admin because your vite.config.js base is '/admin/' -->
+    <script type="module" src="/main.jsx"></script>
   </body>
 </html>
