--- a/client_frontend/src/index.html
+++ b/client_frontend/src/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZEPUS Admin Portal</title>
+    <title>ZEPUS Clinics</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- ✅ This will be rewritten automatically by Vite with the actual hashed bundle -->
     <script type="module" src="/main.jsx"></script>
   </body>
 </html>
