--- a/client_frontend/index.html
+++ b/client_frontend/index.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- ✅ This will be rewritten automatically by Vite with the actual hashed bundle -->
-    <script type="module" src="/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
