--- a/client_frontend/index.html
+++ b/client_frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <base href="/" /> <!-- ✅ ADD THIS LINE -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZEPUS Clinics</title>
   </head>
