--- a/admin_frontend/index.html
+++ b/admin_frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <base href="/admin/" /> <!-- ✅ required for React Router to work -->
     <link rel="icon" href="/admin/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZEPUS Admin</title>
